src/objects/Super_Hero_Alias__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(NOT(ISBLANK(Birthday__c)) ,
  IF(DATE(2000 , MONTH( Birthday__c ) , DAY( Birthday__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
    YEAR (Today()) - YEAR ( Birthday__c ),
    YEAR (Today()) - YEAR ( Birthday__c ) -1 ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secret_Identity__c</fullName>
        <label>Secret Identity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Hero_Name__c</fullName>
        <label>Super Hero Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Super Hero Alias</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Secret_Identity__c</columns>
        <columns>Super_Hero_Name__c</columns>
        <columns>Age__c</columns>
        <columns>Birthday__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SHA-{0000}</displayFormat>
        <label>Super Hero Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Super Hero Alias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>